fix overlap isuue

--- a/app/assets/stylesheets/housing-base.scss
+++ b/app/assets/stylesheets/housing-base.scss
@@ -23,6 +23,9 @@ body {
   background-color: #DAD6CB !important;
 }
 
+nav {
+  z-index: 9 !important;
+}
 .container {
   margin-top: 90px;
 }
